# vds

./: .gitignore  CMakeLists.txt
src/main/c/: vds_array.c  vds_swap.c  vds_utils.c  vdsic_array.c  vdsic_array_delete_l_int.c  vdsic_array_delete_r_int.c  vdsic_array_get_int.c  vdsic_array_get_set_int.c  vdsic_array_iterate_int.c  vdsic_array_set_int.c  vdsic_array_sort_insertion_int.c  vdsic_array_sort_insertion_t_int.c  vdsic_array_sort_merge_td_int.c  vdsic_array_sort_selection_int.c  vdsic_util.c
src/main/h/: vds_array.h  vds_swap.h  vds_utils.h  vdsic_array.h  vdsic_util.h
